<?xml version="1.0"?>
<package>
  <name>exc_control</name>
  <version>0.0.0</version>
  <description>Excavator Control package</description>

  <maintainer email="adam.krpan@outlook.com">Adam Krpan</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/TrickfireRobotics/gazebo_prototype</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>

  <export>
  </export>
</package>
