<?xml version="1.0"?>
<package>
  <name>exc_gazebo</name>
  <version>0.0.0</version>
  <description>Excavator Gazebo package</description>

  <maintainer email="adam.krpan@outlook.com">Adam Krpan</maintainer>

  <license>BSD</license>
  <url type="repository">https://github.com/TrickfireRobotics/gazebo_prototype</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
